--- a/src/Convert to TfLite/LoanAndPredict-train-1.ipynb
+++ b/src/Convert to TfLite/LoanAndPredict-train-1.ipynb
@@ -4,14 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The goal of this notebook is, loading a already saved model and predict on the test \n",
-    "* explore what is the easy way to do image preprocessing before feeing it into a model \n",
-    "* explore how to predict class level \n",
+    "# Convert to TFlite \n",
     "\n",
-    "Next Goals : \n",
-    "\n",
-    "* DO quantization in mobilentvV2, make the model even more light \n",
-    "* See how to use tensorflowlight in docker so that image size reduces from 1.7 GB to less !  "
+    "The goal of this notebook is to convert an existing .h5 model into a .tflite model with parameter tuning "
    ]
   },
   {
@@ -20,12 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "#importing the modules \n",
-    "import tensorflow as tf \n",
-    "import numpy as np\n",
-    "from IPython.display import display\n",
-    "from tensorflow.keras.preprocessing import image"
+    "import tensorflow as tf "
    ]
   },
   {
