--- a/src/MobileNetV2 Implementation/MobilenetV2-model-trial-2.ipynb
+++ b/src/MobileNetV2 Implementation/MobilenetV2-model-trial-2.ipynb
@@ -4,10 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I will try mobilenet V2 with properpreprossing , the way i tried it for Resnet50,\n",
-    "* there will be no Preprocing at all \n",
+    "# MobileNet V2\n",
     "\n",
-    "Lets see and try the outcome "
+    "In this ipython notebook the dataset has been trained with transfer learning  technique Mobilenetv2 "
    ]
   },
   {
@@ -16,47 +15,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.keras.layers import Conv2D, Flatten, Dense, MaxPool2D, BatchNormalization, GlobalAveragePooling2D\n",
-    "\n",
-    "#imported preproceed mobilenetV2\n",
-    "from tensorflow.keras.applications.mobilenet_v2 import preprocess_input,decode_predictions\n",
-    "\n",
-    "from tensorflow.keras.preprocessing.image import ImageDataGenerator, load_img \n",
-    "\n",
-    "\n",
+    "from tensorflow.keras.layers import  Dense, GlobalAveragePooling2D\n",
+    "from tensorflow.keras.applications.mobilenet_v2 import preprocess_input\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator \n",
     "from tensorflow.keras.applications.mobilenet_v2 import MobileNetV2\n",
-    "from tensorflow.keras.preprocessing import image \n",
-    "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.models import Model\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
     "import tensorflow as tf \n",
-    "\n",
     "from sklearn.metrics import ConfusionMatrixDisplay\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/job:localhost/replica:0/task:0/device:GPU:0\n"
-     ]
-    }
-   ],
    "source": [
-    "a = tf.constant([1, 2, 3])\n",
-    "print(a.device)  # /job:localhost/replica:0/task:0/device:CPU:0"
+    "Reading the dataset "
    ]
   },
   {
@@ -71,6 +46,13 @@
     "train_data_dir = r\"F:\\Study\\PGDAIML\\Project-10\\Latest_data_set\\Processed_data\\Processed_data_from_colorLite_dataset-70-15-15\\train\"\n",
     "valid_data_dir =  r\"F:\\Study\\PGDAIML\\Project-10\\Latest_data_set\\Processed_data\\Processed_data_from_colorLite_dataset-70-15-15\\val\"\n",
     "test_data_dir = r\"F:\\Study\\PGDAIML\\Project-10\\Latest_data_set\\Processed_data\\Processed_data_from_colorLite_dataset-70-15-15\\test\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating dataset train, test & validation"
    ]
   },
   {
@@ -112,27 +94,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(32, 224, 224, 3)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "x,y = test_generator.next()\n",
-    "x.shape\n",
-    "\n",
-    "x,y = train_generator.next()\n",
-    "x.shape"
+    "Creating the base model of mobilenetV2"
    ]
   },
   {
@@ -142,6 +107,13 @@
    "outputs": [],
    "source": [
     "base_model = MobileNetV2(include_top=False, weights= \"imagenet\",input_shape= (224, 224, 3) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fine tuning of Model"
    ]
   },
   {
@@ -161,6 +133,13 @@
     "    layer.trainable = False\n",
     "\n",
     "model.compile(optimizer= tf.keras.optimizers.Adam(learning_rate= 0.0001), loss=\"categorical_crossentropy\", metrics = ['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model Training "
    ]
   },
   {
@@ -343,6 +322,13 @@
    "source": [
     "reconstructed_model = tf.keras.models.load_model(r\"F:\\Study\\PGDAIML\\Project-10\\phase-5\\MobileNet\\savedModels\\mobileNetv2-model-2-Date-11-02-22_Acc-98-batch-32-dataset-70-15-15.h5\")\n",
     "test_loss, test_acc = reconstructed_model.evaluate(test_generator,verbose=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Confusion Matrix "
    ]
   },
   {
