--- a/src/ResnNet50Implemetation/Resnet50-model-trial-4.ipynb
+++ b/src/ResnNet50Implemetation/Resnet50-model-trial-4.ipynb
@@ -4,16 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Major Chnage in version v of resnet 50 \n",
+    "# ResNet50 Implementation\n",
     "\n",
-    "* in the last version i have tried using batch size 32 , there no drop in performance \n",
-    "* In this version  of resnet that v4, i will try a different ratio of train , test & validation split of the data 70, 15, 15\n",
-    "\n",
-    "Outcome :- \n",
-    "\n",
-    "1. with this split also accurecy is as good as the old one \n",
-    "\n",
-    "I will consider this model as the final model of resnet 50 \n"
+    "The implementation is for trying ResNet50 Transfer learning method on the dataset "
    ]
   },
   {
@@ -22,23 +15,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.keras.layers import Conv2D, Flatten, Dense, MaxPool2D, BatchNormalization, GlobalAveragePooling2D\n",
-    "from tensorflow.keras.applications.resnet50 import preprocess_input, decode_predictions\n",
-    "\n",
-    "from tensorflow.keras.preprocessing.image import ImageDataGenerator, load_img \n",
+    "from tensorflow.keras.layers import  Dense, GlobalAveragePooling2D\n",
+    "from tensorflow.keras.applications.resnet50 import preprocess_input\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator \n",
     "from tensorflow.keras.applications.resnet50 import ResNet50\n",
-    "from tensorflow.keras.preprocessing import image \n",
-    "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.models import Model\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
     "import tensorflow as tf \n",
-    "\n",
     "from sklearn.metrics import ConfusionMatrixDisplay\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -82,27 +68,6 @@
     "    directory=test_data_dir, target_size=(224,224), batch_size=1, shuffle=False)\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1, 224, 224, 3)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x,y = test_generator.next()\n",
-    "x.shape"
    ]
   },
   {
